--- a/index.html
+++ b/index.html
@@ -10,7 +10,68 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <script type="text/javscript" src="./js/bootstrap.bundle.min.js"></script>
+    <nav
+      class="navbar fixed-top navbar-expand-md navbar-light bg-light shadow-sm py-3"
+    >
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <img src="./img/caravan.svg" alt="Caravan" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Abrir navegação"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >Locais</a
+              >
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a href="local.html" class="dropdown-item">California</a>
+                </li>
+                <li><a href="local.html" class="dropdown-item">Paris</a></li>
+                <li><a href="local.html" class="dropdown-item">Dublin</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a href="planos.html" class="nav-link">Planos</a>
+            </li>
+            <li class="nav-item">
+              <a href="planos.html" class="nav-link">Contato</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Login</a>
+            </li>
+            <li class="nav-item">
+              <a href="inscricao.html" class="btn btn-outline-primary ms-md-2"
+                >Inscreva-se</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <script type="module" src="./js/bootstrap.bundle.min.js"></script>
     <script type="text/javscript" src="./js/bootstrap.js"></script>
     <script type="text/javscript" src="./js/main.js"></script>
   </body>
