--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav
       class="navbar fixed-top navbar-expand-md navbar-light bg-light shadow-sm py-3"
     >
-      <div class="container">
+      <div class="container-fluid">
         <a href="index.html" class="navbar-brand">
           <img src="./img/caravan.svg" alt="Caravan" />
         </a>
@@ -70,6 +70,114 @@
         </div>
       </div>
     </nav>
+
+    <section class="container-fluid">
+      <div class="row bg-dark text-white">
+        <div class="col-lg-7 p-0">
+          <div
+            id="carouselCidades"
+            class="carousel slide"
+            data-bs-ride="carousel"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselCidades"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselCidades"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselCidades"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img
+                  src="./img/california.jpg"
+                  class="d-block w-100"
+                  alt="California"
+                />
+                <div class="carousel-caption">
+                  <h4 class="display-3">California</h4>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/paris.jpg" class="d-block w-100" alt="Paris" />
+                <div class="carousel-caption">
+                  <h4 class="display-3">Paris</h4>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img
+                  src="./img/dublin.jpg"
+                  class="d-block w-100"
+                  alt="Dublin"
+                />
+                <div class="carousel-caption">
+                  <h4 class="display-3">Dublin</h4>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselCidades"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Anterior</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselCidades"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Próximo</span>
+            </button>
+          </div>
+        </div>
+        <div class="col-lg-5 p-4">
+          <h1 class="display-1">Realize a viagem do seu sonho</h1>
+          <p class="lead">
+            O melhor local para viajar é com a Caravan, mais de 5.000 excursões
+            concluídas.
+          </p>
+          <form action="">
+            <div class="input-group input-group-lg mb-3">
+              <input
+                type="email"
+                class="form-control"
+                placeholder="E-mail"
+                aria-label="Email"
+                aria-describedby="Inscrever"
+              />
+              <button class="btn btn-primary" type="button" id="Inscrever">
+                Inscreva-se
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
 
     <script type="module" src="./js/bootstrap.bundle.min.js"></script>
     <script type="text/javscript" src="./js/bootstrap.js"></script>
