--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
               <img src="./img/icones/praias.svg" alt="Praias" />
             </div>
 
-            <h3>PRaias</h3>
+            <h3>Praias</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
@@ -247,6 +247,18 @@
           >Comprar Plano</a
         >
       </div>
+    </section>
+
+    <section id="home-quote" class="p-md-5">
+      <blockquote class="blockquote text-center text-white p-md-5 p-3">
+        <p class="display-4">
+          <em
+            >"A felicidade não está na estrada que leva a algum lugar. <br />A
+            felicidade é a própria estrada."</em
+          >
+        </p>
+        <cite class="blockquote-footer text-white">Bob Dylan</cite>
+      </blockquote>
     </section>
 
     <script type="module" src="./js/bootstrap.bundle.min.js"></script>
