--- a/index.html
+++ b/index.html
@@ -10,6 +10,57 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="modalLogin"
+      tabindex="-1"
+      aria-labelledby="modalLogin"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalLogin">Entre na sua conta</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="mb-3">
+                <label for="loginEmail" class="form-label">Email</label>
+                <input type="email" class="form-control" id="loginEmail" />
+              </div>
+              <div class="mb-3">
+                <label for="loginSenha" class="form-label">Senha</label>
+                <input type="password" class="form-control" id="loginSenha" />
+              </div>
+              <div class="mb-3 form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input"
+                  id="loginLembrar"
+                />
+                <label class="form-check-label" for="loginLembrar"
+                  >Lembrar-me</label
+                >
+              </div>
+              <button type="submit" class="btn btn-primary mb-2">
+                Entrar na conta
+              </button>
+              <small class="form-text text-muted">
+                <br />Esqueceu a senha? <a href="#">Clique aqui</a>.
+              </small>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <nav
       class="navbar fixed-top navbar-expand-md navbar-light bg-light shadow-sm py-3"
     >
@@ -59,7 +110,13 @@
               <a href="planos.html" class="nav-link">Contato</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Login</a>
+              <a
+                href="#"
+                class="nav-link"
+                data-bs-toggle="modal"
+                data-bs-target="#modalLogin"
+                >Login</a
+              >
             </li>
             <li class="nav-item">
               <a href="inscricao.html" class="btn btn-outline-primary ms-md-2"
@@ -155,7 +212,7 @@
             </button>
           </div>
         </div>
-        <div class="col-lg-5 p-4">
+        <div class="col-lg-5 p-4 align-self-center">
           <h1 class="display-1">Realize a viagem do seu sonho</h1>
           <p class="lead">
             O melhor local para viajar é com a Caravan, mais de 5.000 excursões
@@ -260,6 +317,222 @@
         <cite class="blockquote-footer text-white">Bob Dylan</cite>
       </blockquote>
     </section>
+
+    <section class="container">
+      <div class="my-5 text-center">
+        <span class="h6 d-block">AINDA ESTÁ COM DÚVIDAS?</span>
+        <h2 class="display-4 text-primary">Perguntas Frequentes</h2>
+      </div>
+      <div class="row justify-content-center">
+        <div class="accordion" id="faq">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#p1"
+                aria-expanded="true"
+                aria-controls="p1"
+              >
+                É possível cancelar a viagem?
+              </button>
+            </h2>
+            <div
+              id="p1"
+              class="accordion-collapse collapse show"
+              aria-labelledby="headingOne"
+              data-bs-parent="#faq"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita sint magni earum dignissimos odio cumque nam debitis
+                eos. At voluptatibus amet doloremque libero architecto quo
+                mollitia! Perferendis non accusantium facilis.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#p2"
+                aria-expanded="false"
+                aria-controls="p2"
+              >
+                Qual a garantia que eu tenho se perder o vôo?
+              </button>
+            </h2>
+            <div
+              id="p2"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingTwo"
+              data-bs-parent="#faq"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita sint magni earum dignissimos odio cumque nam debitis
+                eos. At voluptatibus amet doloremque libero architecto quo
+                mollitia! Perferendis non accusantium facilis.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#p3"
+                aria-expanded="false"
+                aria-controls="p3"
+              >
+                Qual a principal forma de viagem?
+              </button>
+            </h2>
+            <div
+              id="p3"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingThree"
+              data-bs-parent="#faq"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita sint magni earum dignissimos odio cumque nam debitis
+                eos. At voluptatibus amet doloremque libero architecto quo
+                mollitia! Perferendis non accusantium facilis.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFour">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#p4"
+                aria-expanded="false"
+                aria-controls="p4"
+              >
+                Qual o melhor destino de viagem?
+              </button>
+            </h2>
+            <div
+              id="p4"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingFour"
+              data-bs-parent="#faq"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita sint magni earum dignissimos odio cumque nam debitis
+                eos. At voluptatibus amet doloremque libero architecto quo
+                mollitia! Perferendis non accusantium facilis.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingFive">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#p5"
+                aria-expanded="false"
+                aria-controls="p5"
+              >
+                Vocês dão descontos para grupos grandes?
+              </button>
+            </h2>
+            <div
+              id="p5"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingFive"
+              data-bs-parent="#faq"
+            >
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita sint magni earum dignissimos odio cumque nam debitis
+                eos. At voluptatibus amet doloremque libero architecto quo
+                mollitia! Perferendis non accusantium facilis.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="text-center my-4">
+        <p class="small m-2">FALE CONOSCO PARA MAIS DÚVIDAS</p>
+        <a href="contato.html" class="btn btn-primary btn-lg"
+          >Entre em Contato</a
+        >
+      </div>
+    </section>
+
+    <footer class="bg-dark text-white">
+      <div class="container py-4">
+        <div class="row">
+          <div class="col-md-3 col-6">
+            <h4 class="h6">PÁGINAS</h4>
+            <ul class="list-unstyled">
+              <li><a href="planos.html">Planos</a></li>
+              <li><a href="contato.html">Contato</a></li>
+              <li><a href="inscricao.html">Inscreva-se</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3 col-6">
+            <h4 class="h6">LOCAIS</h4>
+            <ul class="list-unstyled">
+              <li><a href="local.html">Califórnia</a></li>
+              <li><a href="local.html">Paris</a></li>
+              <li><a href="local.html">Dublin</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <h4 class="h6">DADOS DE CONTATO</h4>
+            <ul class="list-unstyled text-secondary">
+              <li>caravan@caravan.com.br</li>
+              <li>17 99999-9999</li>
+              <li>De Seg. à Sex. das 8h às 18h</li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <h4 class="h6">REDES SOCIAIS</h4>
+            <ul class="list-unstyled text-secondary">
+              <li>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
+                  style="max-width: 140px"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
+                  style="max-width: 140px"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a
+                  href="#"
+                  class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
+                  style="max-width: 140px"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="bg-primary text-center py-3">
+        <p class="mb-0">Caravan 2022. Alguns direitos reservados.</p>
+      </div>
+    </footer>
 
     <script type="module" src="./js/bootstrap.bundle.min.js"></script>
     <script type="text/javscript" src="./js/bootstrap.js"></script>
