--- a/planos.html
+++ b/planos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Caravan - Local</title>
+    <title>Caravan - Planos</title>
 
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -85,7 +85,7 @@
             <li class="nav-item dropdown">
               <a
                 href="#"
-                class="nav-link dropdown-toggle active"
+                class="nav-link dropdown-toggle"
                 id="navbarDropdownMenuLink"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -104,7 +104,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a href="planos.html" class="nav-link">Planos</a>
+              <a href="planos.html" class="nav-link active">Planos</a>
             </li>
             <li class="nav-item">
               <a href="planos.html" class="nav-link">Contato</a>
@@ -130,85 +130,84 @@
 
     <section class="container">
       <div class="text-center my-5">
-        <span class="h6 d-block">O MELHOR DESTINO DA SUA VIAGEM</span>
-        <h1 class="display-4 text-primary">Descubra Dublin</h1>
+        <span class="h6 d-block">SEU PLANO, SUA VIAGEM</span>
+        <h1 class="display-4 text-primary">Escolha o Plano</h1>
       </div>
 
       <div class="row">
-        <div class="col-md">
-          <img class="img-fluid mb-4" src="img/local/foto-1.jpg" alt="Foto 1" />
-          <img class="img-fluid mb-4" src="img/local/foto-2.jpg" alt="Foto 2" />
-          <img class="img-fluid mb-4" src="img/local/foto-3.jpg" alt="Foto 3" />
+        <div class="col-md mb-5">
+          <div class="bg-light rounded p-4 shadow">
+            <h2>Gold</h2>
+
+            <ul class="lista-plano list-unstyled">
+              <li>30 dias de viagem</li>
+              <li>3 destinos diferentes</li>
+              <li>Tudo pago pela empresa</li>
+              <li>Ingressos para festas</li>
+            </ul>
+
+            <form>
+              <select class="form-select" aria-label="City">
+                <option selected>Selecione a cidade</option>
+                <option value="1">California</option>
+                <option value="2">Paris</option>
+                <option value="3">Dublin</option>
+              </select>
+            </form>
+
+            <div class="row align-items-center mt-4">
+              <div class="col">
+                <a
+                  href="inscricao.html"
+                  class="btn btn-primary btn-lg btn-block"
+                  >Comprar Plano</a
+                >
+              </div>
+              <div class="col">
+                <span class="h4">R$ 5.000</span>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-md">
-          <img class="img-fluid mb-4" src="img/local/foto-4.jpg" alt="Foto 4" />
-          <img class="img-fluid mb-4" src="img/local/foto-5.jpg" alt="Foto 5" />
-        </div>
-        <div class="col-md">
-          <img class="img-fluid mb-4" src="img/local/foto-6.jpg" alt="Foto 6" />
-          <img class="img-fluid mb-4" src="img/local/foto-7.jpg" alt="Foto 7" />
+        <div class="col">
+          <div class="bg-light rounded p-4 shadow">
+            <h2>
+              Platinum
+              <span class="badge bg-success">Novo</span>
+            </h2>
+            
+            <ul class="lista-plano list-unstyled">
+              <li>60 dias de viagem</li>
+              <li>6 destinos diferentes</li>
+              <li>Tudo pago pela empresa</li>
+              <li>Ingressos para festas</li>
+            </ul>
+
+            <form>
+              <select class="form-select" aria-label="City">
+                <option selected>Selecione a cidade</option>
+                <option value="1">California</option>
+                <option value="2">Paris</option>
+                <option value="3">Dublin</option>
+              </select>
+            </form>
+
+            <div class="row align-items-center mt-4">
+              <div class="col">
+                <a
+                  href="inscricao.html"
+                  class="btn btn-primary btn-lg btn-block"
+                  >Comprar Plano</a
+                >
+              </div>
+              <div class="col">
+                <span class="h4">R$ 7.500</span>
+              </div>
+            </div>
+          </div>
+          </div>
         </div>
       </div>
-    </section>
-
-    <section class="container">
-      <div class="text-center my-5">
-        <span class="h6 d-block">DESCUBRA O QUE ACONTECE NA CIDADE</span>
-        <h1 class="display-4 text-primary">Próximos Eventos</h1>
-      </div>
-
-      <table class="table table-hover text-center">
-        <thead>
-          <tr>
-            <th scope="col">Data</th>
-            <th scope="col">Evento</th>
-            <th scope="col">Local</th>
-            <th scope="col">Ticket</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">23/10</th>
-            <td>Julien Baker</td>
-            <td>The Academy</td>
-            <td>
-              <a href="#" class="btn btn-outline-secondary btn-sm"
-                >Comprar ticket</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">23/10</th>
-            <td>Julien Baker</td>
-            <td>The Academy</td>
-            <td>
-              <a href="#" class="btn btn-outline-secondary btn-sm"
-                >Comprar ticket</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">23/10</th>
-            <td>Julien Baker</td>
-            <td>The Academy</td>
-            <td>
-              <a href="#" class="btn btn-outline-secondary btn-sm"
-                >Comprar ticket</a
-              >
-            </td>
-          </tr>
-          <tr>
-            <th scope="row">23/10</th>
-            <td>Julien Baker</td>
-            <td>The Academy</td>
-            <td>
-              <a href="#" class="btn btn-outline-secondary btn-sm"
-                >Comprar ticket</a
-              >
-            </td>
-          </tr>
-        </tbody>
-      </table>
     </section>
 
     <footer class="bg-dark text-white mt-5">
