Layout: Page contato criada

--- a/local.html
+++ b/local.html
@@ -240,12 +240,11 @@
           </div>
           <div class="col-md-2">
             <h4 class="h6">REDES SOCIAIS</h4>
-            <ul class="list-unstyled text-secondary">
+            <ul class="list-unstyled text-secondary" style="max-width: 140px">
               <li>
                 <a
                   href="#"
                   class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
-                  style="max-width: 140px"
                   >Facebook</a
                 >
               </li>
@@ -253,7 +252,6 @@
                 <a
                   href="#"
                   class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
-                  style="max-width: 140px"
                   >Twitter</a
                 >
               </li>
@@ -261,7 +259,6 @@
                 <a
                   href="#"
                   class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
-                  style="max-width: 140px"
                   >Youtube</a
                 >
               </li>
