--- a/contato.html
+++ b/contato.html
@@ -107,7 +107,7 @@
               <a href="planos.html" class="nav-link">Planos</a>
             </li>
             <li class="nav-item">
-              <a href="contato.html" class="nav-link">Contato</a>
+              <a href="contato.html" class="nav-link active">Contato</a>
             </li>
             <li class="nav-item">
               <a
@@ -128,194 +128,73 @@
       </div>
     </nav>
 
-    <section class="container-fluid">
-      <div class="row bg-dark text-white">
-        <div class="col-lg-7 p-0">
-          <div
-            id="carouselCidades"
-            class="carousel slide"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#carouselCidades"
-                data-bs-slide-to="0"
-                class="active"
-                aria-current="true"
-                aria-label="Slide 1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselCidades"
-                data-bs-slide-to="1"
-                aria-label="Slide 2"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#carouselCidades"
-                data-bs-slide-to="2"
-                aria-label="Slide 3"
-              ></button>
+    <section class="container">
+      <div class="my-5 text-center">
+        <span class="h6 d-block">POSSUI ALGUMA DÚVIDA?</span>
+        <h2 class="display-4 text-primary">Fale Conosco</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg mb-5">
+          <form class="bg-light rounded p-4 shadow">
+            <div class="mb-3">
+              <label for="clienteNome" class="form-label">Nome</label>
+              <input type="text" class="form-control" id="clienteNome" />
             </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img
-                  src="./img/california.jpg"
-                  class="d-block w-100"
-                  alt="California"
-                />
-                <div class="carousel-caption">
-                  <h4 class="display-3">California</h4>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./img/paris.jpg" class="d-block w-100" alt="Paris" />
-                <div class="carousel-caption">
-                  <h4 class="display-3">Paris</h4>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img
-                  src="./img/dublin.jpg"
-                  class="d-block w-100"
-                  alt="Dublin"
-                />
-                <div class="carousel-caption">
-                  <h4 class="display-3">Dublin</h4>
-                </div>
-              </div>
+            <div class="mb-3">
+              <label for="clienteEmail" class="form-label">Email</label>
+              <input type="email" class="form-control" id="clienteEmail" />
             </div>
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#carouselCidades"
-              data-bs-slide="prev"
-            >
-              <span
-                class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Anterior</span>
+            <div class="mb-3">
+              <label for="clienteMensagem" class="form-label">Mensagem</label>
+              <textarea class="form-control" id="clienteMensagem"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">
+              Enviar Mensagem
             </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#carouselCidades"
-              data-bs-slide="next"
-            >
-              <span
-                class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
-              <span class="visually-hidden">Próximo</span>
-            </button>
-          </div>
-        </div>
-        <div class="col-lg-5 p-4 align-self-center">
-          <h1 class="display-1">Realize a viagem do seu sonho</h1>
-          <p class="lead">
-            O melhor local para viajar é com a Caravan, mais de 5.000 excursões
-            concluídas.
-          </p>
-          <form action="">
-            <div class="input-group input-group-lg mb-3">
-              <input
-                type="email"
-                class="form-control"
-                placeholder="E-mail"
-                aria-label="Email"
-                aria-describedby="Inscrever"
-              />
-              <button class="btn btn-primary" type="button" id="Inscrever">
-                Inscreva-se
-              </button>
-            </div>
           </form>
         </div>
-      </div>
-    </section>
+        <div class="col-lg">
+          <h2 class="h6">NOSSO ENDEREÇO</h2>
+          <a
+            ><img
+              class="img-fluid shadow rounded mb-4"
+              src="img/mapa.png"
+              alt="Endereço da empresa"
+          /></a>
+          <h2 class="h6">DADOS DE CONTATO</h2>
+          <ul class="list-unstyled text-secondary">
+            <li>caravan@caravan.com.br</li>
+            <li>17 99999-9999</li>
+            <li>De Seg. à Sex. das 8h às 18h</li>
+          </ul>
 
-    <section class="py-5 bg-light text-center">
-      <div class="container">
-        <div class="my-5">
-          <span class="h6 d-block">TUDO DE MELHOR PARA VOCÊ</span>
-          <h2 class="display-4 text-primary">Aproveite as Vantagens</h2>
-        </div>
-
-        <div class="row">
-          <div class="col-xl-4 col-md-6">
-            <div class="d-flex justify-content-center icone">
-              <img src="./img/icones/passaporte.svg" alt="Passaporte" />
-            </div>
-            <h3>Documentos</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-
-          <div class="col-xl-4 col-md-6">
-            <div class="d-flex justify-content-center icone">
-              <img src="./img/icones/passagens.svg" alt="Passagens" />
-            </div>
-
-            <h3>Passagens</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-
-          <div class="col-xl-4 col-md-6">
-            <div class="d-flex justify-content-center icone">
-              <img src="./img/icones/translado.svg" alt="Translado" />
-            </div>
-
-            <h3>Translado</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-
-          <div class="col-xl-4 col-md-6">
-            <div class="d-flex justify-content-center icone">
-              <img src="./img/icones/turismo.svg" alt="Turismo" />
-            </div>
-
-            <h3>Turismo</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-
-          <div class="col-xl-4 col-md-6">
-            <div class="d-flex justify-content-center icone">
-              <img src="./img/icones/bagagens.svg" alt="Bagagens" />
-            </div>
-
-            <h3>Bagagens</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
-
-          <div class="col-xl-4 col-md-6">
-            <div class="d-flex justify-content-center icone">
-              <img src="./img/icones/praias.svg" alt="Praias" />
-            </div>
-
-            <h3>Praias</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
+          <h2 class="h6">REDES SOCIAIS</h2>
+          <ul class="list-unstyled text-secondary" style="max-width: 260px">
+            <li>
+              <a
+                href="#"
+                class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
+                >Facebook</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
+                >Twitter</a
+              >
+            </li>
+            <li>
+              <a
+                href="#"
+                class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
+                >Youtube</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
-
-      <div>
-        <a href="planos.html" class="btn btn-primary btn-lg mt-4"
-          >Comprar Plano</a
-        >
-      </div>
-    </section>
-
-    <section id="home-quote" class="p-md-5">
-      <blockquote class="blockquote text-center text-white p-md-5 p-3">
-        <p class="display-4">
-          <em
-            >"A felicidade não está na estrada que leva a algum lugar. <br />A
-            felicidade é a própria estrada."</em
-          >
-        </p>
-        <cite class="blockquote-footer text-white">Bob Dylan</cite>
-      </blockquote>
     </section>
 
     <section class="container">
@@ -499,6 +378,7 @@
           </div>
           <div class="col-md-2">
             <h4 class="h6">REDES SOCIAIS</h4>
+
             <ul class="list-unstyled text-secondary" style="max-width: 140px">
               <li>
                 <a
