--- a/planos.html
+++ b/planos.html
@@ -239,12 +239,11 @@
           </div>
           <div class="col-md-2">
             <h4 class="h6">REDES SOCIAIS</h4>
-            <ul class="list-unstyled text-secondary">
+            <ul class="list-unstyled text-secondary" style="max-width: 140px">
               <li>
                 <a
                   href="#"
                   class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
-                  style="max-width: 140px"
                   >Facebook</a
                 >
               </li>
@@ -252,7 +251,6 @@
                 <a
                   href="#"
                   class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
-                  style="max-width: 140px"
                   >Twitter</a
                 >
               </li>
@@ -260,7 +258,6 @@
                 <a
                   href="#"
                   class="btn btn-outline-secondary btn-sm btn-block mb-2 w-100"
-                  style="max-width: 140px"
                   >Youtube</a
                 >
               </li>
