--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Caravan</title>
+    <title>Caravan - Contato</title>
 
     <link rel="stylesheet" href="./css/bootstrap.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -131,7 +131,7 @@
     <section class="container">
       <div class="my-5 text-center">
         <span class="h6 d-block">POSSUI ALGUMA DÚVIDA?</span>
-        <h2 class="display-4 text-primary">Fale Conosco</h2>
+        <h1 class="display-4 text-primary">Fale Conosco</h1>
       </div>
       <div class="row">
         <div class="col-lg mb-5">
@@ -197,7 +197,7 @@
       </div>
     </section>
 
-    <section class="container">
+    <section class="container mb-5">
       <div class="my-5 text-center">
         <span class="h6 d-block">AINDA ESTÁ COM DÚVIDAS?</span>
         <h2 class="display-4 text-primary">Perguntas Frequentes</h2>
@@ -340,12 +340,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="text-center my-4">
-        <p class="small m-2">FALE CONOSCO PARA MAIS DÚVIDAS</p>
-        <a href="contato.html" class="btn btn-primary btn-lg"
-          >Entre em Contato</a
-        >
       </div>
     </section>
 
