--- a/index.html
+++ b/index.html
@@ -86,16 +86,13 @@
               <a
                 href="#"
                 class="nav-link dropdown-toggle"
-                id="navbarDropdownMenuLink"
+                id="navbarDropdown"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
                 >Locais</a
               >
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li>
                   <a href="local.html" class="dropdown-item">California</a>
                 </li>
