--- a/local.html
+++ b/local.html
@@ -107,7 +107,7 @@
               <a href="planos.html" class="nav-link">Planos</a>
             </li>
             <li class="nav-item">
-              <a href="planos.html" class="nav-link">Contato</a>
+              <a href="contato.html" class="nav-link">Contato</a>
             </li>
             <li class="nav-item">
               <a
