--- a/planos.html
+++ b/planos.html
@@ -107,7 +107,7 @@
               <a href="planos.html" class="nav-link active">Planos</a>
             </li>
             <li class="nav-item">
-              <a href="planos.html" class="nav-link">Contato</a>
+              <a href="contato.html" class="nav-link">Contato</a>
             </li>
             <li class="nav-item">
               <a
@@ -140,7 +140,7 @@
             <h2>Gold</h2>
 
             <ul class="lista-plano list-unstyled">
-              <li>30 dias de viagem</li>
+              <li><span data-bs-toggle="tooltip" data-bs-placement="right" title="Isso mesmo, são 30 dias totais durante a viagem.">30 dias de viagem</span></li>
               <li>3 destinos diferentes</li>
               <li>Tudo pago pela empresa</li>
               <li>Ingressos para festas</li>
